@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-15T00:32:49Z",
+  "timestamp" : "2022-11-15T08:08:31Z",
   "count_outdated" : 1921,
   "uniques_outdated" : 618,
-  "count" : 1938,
-  "uniques" : 626,
+  "count" : 1939,
+  "uniques" : 628,
   "clones" : [
     {
       "timestamp": "2022-11-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -46,6 +46,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-15T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
