@@ -1,10 +1,10 @@
 {
-  "count": 17,
-  "uniques": 5,
+  "count": 18,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-11-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -31,6 +31,11 @@
       "timestamp": "2022-11-14T00:00:00Z",
       "count": 3,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-15T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
