@@ -1,3 +1,11 @@
+2022-11-15T08:08:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3468576281 # 1033
+* notice: last 14d: unq all: 6 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 618 1921 / 626 1938
+* notice: next accum: outdated-unq outdated-all / unq all: 618 1921 / 628 1939
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-11-01 2022-11-15]
+
 2022-11-15T00:32:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3466372884 # 1032
 * notice: last 14d: unq all: 5 17
